cmake_minimum_required(VERSION 3.30)
project(zadania_petle C)

set(CMAKE_C_STANDARD 11)

add_executable(zadania_petle main.c
        7.1.1.c
        7.1.2.c
        7.1.3.c
        7.1.4.c
        7.1.5.c
        7.1.6.c
        7.1.7.c
        7.1.8.c
        7.1.9.c
        7.1.10.c
        7.1.11.c
        7.1.12.c
        7.1.13.c
        7.1.14.c
        7.1.15.c
        7.1.16.c
        7.1.17.c
        7.1.18.c
        7.1.19.c
        7.2.1.c
        7.2.2.c
        7.2.3.c
        7.2.4.c
        7.3.1.c
        7.3.2.c
        7.3.4.c
        7.3.3.c
        7.4.1.c
        7.4.2.c
        7.4.3.c
        7.4.4.c
        7.4.5.c
        7.4.6.c
        7.4.7.c
        7.4.8.c
        7.4.9.c
        7.4.10.c
        7.5.1.c
        7.5.2.c
        7.5.3.c
        7.5.4.c
        7.5.5.c
        7.5.6.c
        7.6.1.c
        7.6.2.c
        7.6.3.c
        7.6.4.c
        7.6.5.c
        7.6.6.c
        7.6.7.c
        7.6.8.c
        7.6.9.c
        7.6.10.c
        7.6.11.c
        7.6.12.c
        7.6.13.c
        7.6.14.c
        7.6.15.c
        7.6.16.c
)
